--- a/README.org
+++ b/README.org
@@ -1,2 +1,22 @@
 * A Crypto Trendfollowing System
-This is (going to be) an implementation of a complete, systematic, fully automated, trend following system for cryptocurrencies. 
+This is (going to be) an implementation of a complete, systematic, fully automated, trend following system for cryptocurrencies.
+** Trendfollowing
+In short: "Buying things that go up and selling things that go down". There are some ideas why trend following works from slow diffusion of informations to reflexivity.
+We are just going to assume that it works (it does) and that it will work on crypto. Most things that work well in established markets work even better in crypto due to
+its novel and therefore inefficient nature.
+
+This trendfollowing system is going to closely follow the ideas and concepts outline by Robert Carver in his book "Advanced Futures Trading Strategies" as well as his blog
+"thisblogissystematic". There is no magic or secret sauce to trend following:
+*** Trend Signals
+A trend signal is a scalar forecast of "how strong" a trend is. We will scale and cap those forecasts.
+*** Volatility Target
+Our entire enterprise will aim to achieve a certain annual portfolio volatility (standard deviation of returns). This isn't the returns of the portfolio, but how much our
+AUM will wiggle over the year.
+** TODO
+- implement a backtesting system
+  - universe selection
+  - signal generation
+  - trading cost estimation
+  - execution
+  - summary statistics
+- 
